mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_type_result_new.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Undefined variable 'result'
--> test_scripts/error_cases/semantic_undefined_type_result_new.mux:2:18
   |
 2 | auto empty_res = result.new()
   |                  ^^^^^^
   |
= help: Result has no '.new()' constructor. Use 'ok(value)' or 'err(message)' to construct one. For example: result<int, string> my_res = ok(42)
